Fix too long username cause playing indicator hidden when host reveal booked user

--- a/client/css/jukebox.scss
+++ b/client/css/jukebox.scss
@@ -1060,7 +1060,6 @@ dt::before {
 
 .songs__list {
 	&__player-info {
-		width: 70px;
 		display: flex;
 		align-items: center;
 		justify-content: flex-end;
